fixed footer on small screens

--- a/JustABackup/wwwroot/css/site.css
+++ b/JustABackup/wwwroot/css/site.css
@@ -3,8 +3,7 @@
 }
 
 footer {
-    position: absolute;
-    bottom: 0;
+    margin-top: 30px;
     width: 100%;
 }
 
